# moteur-server-rest

./: .env-template  .env.apache  .env.moteurlite  .env.vip  .gitignore  README.md  constraints.txt  msr.conf  msr.conf-template  msr.conf.vip  pyproject.toml
moteur-server-rest/: auth.py  config.py  file_utils.py  index.py  jvm_utils.py  routes.py  server.py  utils.py  workflow_manager.py  wsgi.py
moteur_server_rest/: auth.py  bootstrap.py  routes.py  server.py  workflow_manager.py  wsgi.py
