[tool.poetry]
name = "moteur-server-rest"
version = "0.1.0"
description = ""
authors = [
    "Hippolyte Blot <hippolyte.blot@creatis.insa-lyon.fr>",
    "Axel Bonnet <axel.bonnet@creatis.insa-lyon.fr>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
flask = "^3.0.3"
psutil = "^6.0.0"
jpype1 = "^1.5.0"
python-dotenv = "^1.0.1"
flask-httpauth = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
