[project]
name = "moteur-server-rest"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Hippolyte Blot", email = "hippolyte.blot@creatis.insa-lyon.fr" },
  { name = "Axel Bonnet", email = "axel.bonnet@creatis.insa-lyon.fr" }
]
dependencies = [
  "requests>=2.32,<3.0",
  "flask>=3.0,<4.0",
  "psutil>=6,<7",
  "python-dotenv>=1.0,<2.0",
  "flask-httpauth>=4.8,<5.0",
  "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Inclut le dossier source tel quel dans la wheel
packages = ["moteur_server_rest"]
